[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/game/generic/blue_12x12.png" type="Texture" id=2]
[ext_resource path="res://Player/MovementController.gd" type="Script" id=3]
[ext_resource path="res://Player/InputController.gd" type="Script" id=4]
[ext_resource path="res://Player/PositionQueue.gd" type="Script" id=5]
[ext_resource path="res://Player/debug/ray_hits.gd" type="Script" id=6]
[ext_resource path="res://assets/game/generic/white_4x4.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 4
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="bottom" type="Position2D" parent="."]
visible = false
position = Vector2( 0, 6 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="Sprite" type="Sprite" parent="bottom"]
modulate = Color( 0.658824, 0.890196, 0.843137, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="MovementController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="JumpTimer" type="Timer" parent="MovementController"]

[node name="InputController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="PositionQueue" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Rays" type="Node2D" parent="."]
visible = false

[node name="RayDown" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_areas = true

[node name="RayDownL" type="RayCast2D" parent="Rays"]
position = Vector2( -6, 6 )
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_areas = true

[node name="RayDownR" type="RayCast2D" parent="Rays"]
position = Vector2( 6, 6 )
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="Rays"]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="RayRightD" type="RayCast2D" parent="Rays"]
position = Vector2( 6, 6 )
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="RayRightU" type="RayCast2D" parent="Rays"]
position = Vector2( 6, -6 )
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="RayUp" type="RayCast2D" parent="Rays"]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 0, -100 )
collide_with_areas = true

[node name="RayUpR" type="RayCast2D" parent="Rays"]
position = Vector2( 6, -6 )
enabled = true
cast_to = Vector2( 0, -100 )
collide_with_areas = true

[node name="RayUpL" type="RayCast2D" parent="Rays"]
position = Vector2( -6, -6 )
enabled = true
cast_to = Vector2( 0, -100 )
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="Rays"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( -100, 0 )
collide_with_areas = true

[node name="RayLeftU" type="RayCast2D" parent="Rays"]
position = Vector2( -6, -6 )
enabled = true
cast_to = Vector2( -100, 0 )
collide_with_areas = true

[node name="RayLeftD" type="RayCast2D" parent="Rays"]
position = Vector2( -6, 6 )
enabled = true
cast_to = Vector2( -100, 0 )
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 144, -88 )
current = true
smoothing_enabled = true
smoothing_speed = 30.0

[node name="Ray_hits" type="Node2D" parent="."]
script = ExtResource( 6 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="MovementController/JumpTimer" to="MovementController" method="_on_JumpTimer_timeout"]
